<resources>
    <string name="app_name">XiVPN</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscription</string>
    <string name="proxies">Proxies</string>
    <string name="timeout">Timeout</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="label">Label</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="conflict_label">A proxy with this label already exists.</string>
    <string name="label_help_text">Enter a custom label for the new proxy</string>
    <string name="url">URL</string>
    <string name="empty_label_or_url">Label and url can not be empty.</string>
    <string name="update">Update</string>
    <string name="refresh">Refresh</string>
    <string name="subscription_updating">Updating subscriptions…</string>
    <string name="subscription_error">"Could not update subscription: "</string>
    <string name="subscription_updated">"Subscription updated: "</string>
    <string name="report_bug_github">Report bug on Github</string>
    <string name="subscription_already_exists">Subscription with the same label already exists</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">Get source code on GitHub</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="black_background">Black background</string>
    <string name="appearance">Appearance</string>
    <string name="restart_to_apply">Restart the app for this setting to take effect</string>
    <string name="black_background_summary">Use pure black background in dark theme</string>
    <string name="app_version">App Version</string>
    <string name="vpn_settings">VPN Settings</string>
    <string name="log_level">Log Level</string>
    <string name="logs">Write logs to disk</string>
    <string name="logs_summary">"Write logs to files. To view log files, use a file explorer app (e.g. Material files) and add XiVPN as an external storage. "</string>
    <string name="rules">Rules</string>
    <string name="edit_rule">Edit rule</string>
    <string name="domains">Domains</string>
    <string name="one_per_line">One per line</string>
    <string name="ips">IPs</string>
    <string name="port">Port</string>
    <string name="network">Network</string>
    <string name="protocol">Protocols</string>
    <string name="outbound">Outbound</string>
    <string name="new_rule">New Rule</string>
    <string name="sniffing">Sniffing</string>
    <string name="sniffing_summary">Sniffing domains from traffic data and replace the destination address by the sniffed domain.</string>
    <string name="sniffing_route_only">Sniffing route only</string>
    <string name="sniffing_route_only_summary">Keep the original destination address and only use sniffed domain for routing.</string>
    <string name="geoip_geosite">Geoip / Geosite</string>
    <string name="v2fly_geoip">v2fly/geoip</string>
    <string name="v2fly_geoip_cn">v2fly/geoip CN</string>
    <string name="dbip">Geoip data provided by db-ip.com:</string>
    <string name="ipinfo_geoip">Exclude0122/geoip</string>
    <string name="ipinfo">Geoip data provided by ipinfo.io:</string>
    <string name="ipinfo_geoip_cn">Exclude0122/geoip CN</string>
    <string name="ipinfo_geoip_ir">Exclude0122/geoip IR</string>
    <string name="ipinfo_geoip_ru">Exclude0122/geoip RU</string>
    <string name="custom">Custom</string>
    <string name="custom_geoip_hint">Enter the URL for custom geoip file</string>
    <string name="geoip">Geoip</string>
    <string name="geosite">Geosite</string>
    <string name="v2fly_dlc">v2fly/domain-list-community</string>
    <string name="custom_geosite_hint">Enter the URL for custom geoip file</string>
    <string name="downloading_geo_assets">Downloading geo assets…</string>
    <string name="downloading_error">Download error</string>
    <string name="warning">Warning</string>
    <string name="geoip_not_downloaded"><![CDATA[The Geoip / Geosite database is not downloaded but is being used in routing rules.]]></string>
    <string name="download">Download</string>
    <string name="proxy_chain">Proxy chain</string>
    <string name="select_proxy">Select proxy</string>
    <string name="proxy_chain_empty">Proxy chain must not be empty</string>
    <string name="proxy_chain_not_found">Proxy chain \"%s\": proxy \"%s\" not found</string>
    <string name="proxy_chain_nesting_error">Proxy chain \"%s\": Nested proxy chains are not supported</string>
    <string name="import_form_clipboard">Import from clipboard</string>
    <string name="copy_share_link">Copy share link</string>
    <string name="share_link_example">ss://</string>
    <string name="invalid_link">Invalid link</string>
    <string name="proxy_added">Proxy added</string>
    <string name="split_tunnel">Split Tunnel</string>
    <string name="split_tunnel_summary">Blacklist: Everything except selected apps are proxied.\nWhitelist: Only selected apps are proxied.</string>
    <string name="split_tunnel_apps">Apps</string>
    <string name="search">Search</string>
    <string name="vpn_process_crashed">VPN Process Crashed</string>
    <string name="click_to_open_crash_log">Click here to open crash log</string>
    <string name="tile_label">Toggle VPN</string>
    <string name="xray_config_reloaded">Xray config reloaded</string>
    <string name="dns_toolbox">DNS Toolbox</string>
    <string name="help">Help</string>
    <string name="dns_toolbox_help">DNS Toolbox allows you to perform DNS query using Android\'s built-in DNS resolver.</string>
    <string name="name">Name</string>
    <string name="qtype">QTYPE</string>
    <string name="qname">QNAME</string>
    <string name="dns_no_cache_lookup">No cache lookup</string>
    <string name="dns_no_cache_store">No cache store</string>
    <string name="dns_no_retry">No retry</string>
    <string name="query">Query</string>
    <string name="error">Error</string>
    <string name="dns_requires_api_29">This feature requires Android 9 or above.</string>
    <string name="system_network_info">System Network Info</string>
    <string name="dns">DNS</string>
    <string name="hosts" translatable="false">Hosts</string>
    <string name="hosts_placeholder" translatable="false">one.one.one.one 1.1.1.1\nexample.com example.org</string>
    <string name="hosts_format_error">Malformatted host line:</string>
    <string name="dns_help">This page lets you configure xray\'s built-in DNS server.\n\nNote that DNS queries are not handled by xray unless you manually set a routing rule to redirect them to the DNS outbound.</string>
    <string name="dns_servers">DNS Servers</string>
    <string name="open_xray_docs_dns">Open Xray Manual</string>
    <string name="could_not_save_dns">Could not save DNS settings</string>
    <string name="at_least_one_dns_server">You must keep at least one DNS server</string>
    <string name="address">Address</string>
    <string name="tag" translatable="false">Tag</string>
    <string name="new_dns_server">New DNS Server</string>
    <string name="edit_dns_server">Edit DNS Server</string>
    <string name="could_not_read_dns">Could not read DNS settings</string>
    <string name="dns_server_help">Supported formats for address:\n  - DNS over UDP: IP Address (e.g. 1.1.1.1)\n  - DNS over TCP: tcp://host (e.g. tcp://8.8.8.8)\n  - DNS over HTTPS: https://host:port/dns-query (e.g. https://dns.google/dns-query)\n\nPort:\n  The port number for DNS. Defaults to 53. Not applicable for DNS over HTTPS.\n\nDomains:\n  List of domains that prefer to be resolved using this DNS server.</string>
    <string name="inbound">Inbound</string>
    <string name="inbound_helper_text">Inbound tag can be used to match DNS queries originated from Xray\'s built-in DNS server.</string>
    <string name="inbound_tag">Inbound Tag</string>
    <string name="skip_fallback">Skip Fallback</string>
    <string name="invalid_port">Invalid port</string>
    <string name="security_option_unsupported">Security option "%1$s" is unsupported</string>
    <string name="protocol_unsupported">Protocol "%1$s" is unsupported</string>
    <string name="proxy_chain_help">Proxy chain allows you to use a series of servers.\n\nThe first server in the list is the entry server and the last server is the exit server. Everything in between is intermediate hops (just like tor).</string>
    <string name="proxy_group">Proxy group</string>
    <string name="proxy_group_help">You can group servers into proxy groups and use those groups as placeholders in configurations (e.g. outbound for rules, catch-all outbound or proxy chains).\n\nWhen building Xray config, proxy groups will be replaced by the currently selected server in each group. You may change the selected server on the main screen.\n\nGroups can also include other groups, but circular references (a group containing itself indirectly) are not allowed.</string>
    <string name="proxy_group_cycle">A cycle is found in proxy group: </string>
    <string name="proxy_group_empty">"Proxy group cannot be empty: "</string>
    <string name="proxy_group_not_found">Proxy group \"%s\": proxy \"%s\" not found</string>
    <string name="backup">Backup</string>
    <string name="app">App</string>
    <string name="backup_or_restore">Backup / Restore</string>
    <string name="restore">Restore</string>
    <string name="backup_help">Included in backup:\n- All proxies\n- All routing rules\n- All DNS settings\n- All subscription links</string>
    <string name="restore_help">Warning: all current configuration will be lost when restoring</string>
    <string name="backup_finished">Backup finished</string>
    <string name="backup_error">"Backup error: "</string>
    <string name="restore_error">"Restore error: "</string>
    <string name="restore_finished">Restore finished</string>
    <string name="proxies_help">The highlighted proxy is the catch-all proxy. By default, all traffic is routed through it unless overridden by specific routing rules.</string>
    <string name="unsaved_changes">You have unsaved changes</string>
    <string name="cancel">Cancel</string>
    <string name="discard_changes">Discard changes</string>
    <string name="ipv6">IPv6</string>
    <string name="ipv6_summary">Add IPv6 address and route to VPN network interface.</string>
    <string name="geoip_geosite_summary">Download GEOIP / GEOSITE database</string>
    <string name="subscription_no_verify">Ignore certificate verification</string>
    <string name="subscription_no_verify_summary">Disable SSL certificate verification when updating subscriptions (insecure!)</string>
    <string name="click_for_details">Click for details</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="qrcode_scan">QR Code Scan</string>
    <string name="import_from_qrcode">Import from QR code</string>
    <string name="no_camera_permission">Camera permission is not granted</string>
    <string name="applications">Applications</string>
    <string name="rule_app_help">Match traffic by originating app</string>
    <string name="leak_protection">Leak protection</string>
    <string name="leak_protection_summary">Prevent apps excluded by Split Tunnel or apps from different profiles to bind to the VPN interface. (Requires Android 10+, experimental)</string>
    <string name="donation">Donation</string>
    <string name="donation_summary">I am a broke college student. Please donate to me &#x2764;&#xfe0f;</string>
    <string name="routing_visualization">Routing Visualization</string>
</resources>