<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/vpn_settings">

        <ListPreference
            android:entries="@array/log_levels"
            android:entryValues="@array/log_levels"
            android:title="@string/log_level"
            app:defaultValue="warning"
            app:iconSpaceReserved="false"
            app:key="log_level"
            app:singleLineTitle="true" />

        <CheckBoxPreference
            android:title="@string/logs"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="logs"
            app:summary="@string/logs_summary" />

        <CheckBoxPreference
            android:title="@string/sniffing"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="sniffing"
            app:summary="@string/sniffing_summary" />

        <CheckBoxPreference
            android:title="@string/sniffing_route_only"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="sniffing_route_only"
            app:summary="@string/sniffing_route_only_summary" />

        <Preference
            android:title="@string/geoip_geosite"
            app:iconSpaceReserved="false"
            app:summary="@string/geoip_geosite_summary"
            app:key="geoip_geosite" />


        <CheckBoxPreference
            android:title="@string/ipv6"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="ipv6"
            app:summary="@string/ipv6_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/split_tunnel"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="Blacklist"
            android:entries="@array/split_tunnel_modes"
            android:entryValues="@array/split_tunnel_modes"
            android:title="Mode"
            app:iconSpaceReserved="false"
            app:key="split_tunnel_mode"
            app:summary="@string/split_tunnel_summary" />

        <Preference
            app:iconSpaceReserved="false"
            android:title="@string/split_tunnel_apps"
            app:key="split_tunnel_apps" />

        <CheckBoxPreference
            app:key="leak_protection"
            app:iconSpaceReserved="false"
            android:title="@string/leak_protection"
            app:summary="@string/leak_protection_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/app">

        <Preference
            app:iconSpaceReserved="false"
            app:key="backup_or_restore"
            app:title="@string/backup_or_restore" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:summary="@string/subscription_no_verify_summary"
            app:key="subscription_no_verify"
            app:title="@string/subscription_no_verify" />


    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/appearance">
        <CheckBoxPreference
            android:title="@string/black_background"
            app:iconSpaceReserved="false"
            app:key="black_background"
            app:summary="@string/black_background_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">


        <Preference
            android:title="@string/app_version"
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:summary="" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="privacy_policy"
            app:title="@string/privacy_policy" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="source_code"
            app:summary="@string/source_code_summary"
            app:title="@string/source_code" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="open_source_licenses"
            app:title="@string/open_source_licenses" />

        <Preference
            app:iconSpaceReserved="false"
            android:title="@string/donation"
            app:key="donation"
            app:summary="@string/donation_summary" />


    </PreferenceCategory>

</PreferenceScreen>