<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/subscriptions"
        android:icon="@drawable/baseline_cloud_24"
        android:title="@string/subscriptions"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/proxies"
        android:icon="@drawable/baseline_dns_24"
        android:title="@string/proxies" />

    <item
        android:id="@+id/rules"
        android:icon="@drawable/baseline_alt_route_24"
        android:title="@string/rules" />

    <item
        android:id="@+id/dns"
        android:icon="@drawable/travel_explore"
        android:title="@string/dns"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/dns_toolbox"
        android:title="@string/dns_toolbox"
        app:showAsAction="ifRoom"
        android:icon="@drawable/build"/>

    <item
        android:id="@+id/routing_visualization"
        android:title="@string/routing_visualization"
        android:icon="@drawable/flowchart"
        app:showAsAction="ifRoom" />

</menu>